change metadata-source for ANC*

--- a/examples_flex/procsim_config_l1.json
+++ b/examples_flex/procsim_config_l1.json
@@ -37,17 +37,17 @@
         },
         {
           "type": "ANC_ROTLOS",
-          "metadata_source": ".*L0__VAU_TM.*", // Input to use
+          "metadata_source": ".*L0__OBS___.*", // Input to use
           "size": 0
         },
         {
           "type": "ANC_ATTRES",
-          "metadata_source": ".*L0__VAU_TM.*", // Input to use
+          "metadata_source": ".*L0__OBS___.*", // Input to use
           "size": 0
         },
         {
           "type": "ANC_ORBRES",
-          "metadata_source": ".*L0__VAU_TM.*", // Input to use
+          "metadata_source": ".*L0__OBS___.*", // Input to use
           "size": 0
         },
         {
