get_anx -> get_anx_orbit
calculated from new 'first_orbit' scenario option

--- a/examples_flex/procsim_config_l0_step1.json
+++ b/examples_flex/procsim_config_l0_step1.json
@@ -35,6 +35,8 @@
             "2023-04-11T12:48:00.000000Z"
         ],
 
+        "first_orbit": 1234,
+
         "data_takes": [
             {
                 "apid": "4321",
