Fix invalid task version
Task version should have an xx.yy format

--- a/examples_flex/procsim_config_l1.json
+++ b/examples_flex/procsim_config_l1.json
@@ -14,7 +14,7 @@
       "processor_name": "l1preproc_sm",
       "processor_version": "01.01",
       "task_name": "L1",
-      "task_version": "05.03L01",
+      "task_version": "01.00",
 
       "creation_date": "2023-04-11T10:03:15.000Z",
 
