--- a/examples_flex/procsim_config_l0_step1.json
+++ b/examples_flex/procsim_config_l0_step1.json
@@ -14,7 +14,7 @@
         "processor_name": "l0preproc_sm",
         "processor_version": "01.01",
         "task_name": "Step1",
-        "task_version": "05.03L01",
+        "task_version": "01.00",
 
         // Resources
         "processing_time": 1,
