Update biomass tests to align with upcoming PVML V4 release
This also fixes the task tables to be compliant with the EEGS specification

--- a/examples/procsim_config.json
+++ b/examples/procsim_config.json
@@ -112,7 +112,7 @@
       "processor_name": "l0preproc_sm",
       "processor_version": "01.01",
       "task_name": "Step1",
-      "task_version": "05.03L01",
+      "task_version": "01.00",
 
       // Resources
       "processing_time": 1,
@@ -171,7 +171,7 @@
       "processor_name": "l0_sm",
       "processor_version": "01.01",
       "task_name": "Step2",
-      "task_version": "05.03L01",
+      "task_version": "01.00",
 
       "processing_time": 0,
       "nr_cpu": 1,
@@ -233,7 +233,7 @@
       "processor_name": "l0_sm",
       "processor_version": "01.01",
       "task_name": "Step3",
-      "task_version": "05.03L01",
+      "task_version": "01.00",
       "processing_time": 0,
       "nr_cpu": 1,
       "memory_usage": 0,
@@ -255,7 +255,7 @@
       "processor_name": "l0_sm",
       "processor_version": "01.01",
       "task_name": "Step4",
-      "task_version": "05.03L01",
+      "task_version": "01.00",
       "processing_time": 0,
       "nr_cpu": 1,
       "memory_usage": 0,
@@ -278,7 +278,7 @@
       "processor_name": "l0_sm",
       "processor_version": "01.01",
       "task_name": "Step6",
-      "task_version": "05.03L01",
+      "task_version": "01.00",
       "processing_time": 0,
       "nr_cpu": 1,
       "memory_usage": 0,
@@ -397,7 +397,7 @@
       "processor_name": "l0preproc_ro",
       "processor_version": "01.01",
       "task_name": "Step1",
-      "task_version": "05.03L01",
+      "task_version": "01.00",
 
       // Resources
       "processing_time": 1,
@@ -456,7 +456,7 @@
       "processor_name": "l0_ro",
       "processor_version": "01.01",
       "task_name": "Step2",
-      "task_version": "05.03L01",
+      "task_version": "01.00",
 
       "processing_time": 0,
       "nr_cpu": 1,
@@ -517,7 +517,7 @@
       "processor_name": "l0_ro",
       "processor_version": "01.01",
       "task_name": "Step3",
-      "task_version": "05.03L01",
+      "task_version": "01.00",
       "processing_time": 0,
       "nr_cpu": 1,
       "memory_usage": 0,
@@ -539,7 +539,7 @@
       "processor_name": "l0_ro",
       "processor_version": "01.01",
       "task_name": "Step4",
-      "task_version": "05.03L01",
+      "task_version": "01.00",
       "processing_time": 0,
       "nr_cpu": 1,
       "memory_usage": 0,
@@ -647,7 +647,7 @@
       "processor_name": "l0preproc_ec",
       "processor_version": "01.01",
       "task_name": "Step1",
-      "task_version": "05.03L01",
+      "task_version": "01.00",
 
       "processing_time": 1,
       "nr_cpu": 1,
@@ -699,7 +699,7 @@
       "processor_name": "l0_ec",
       "processor_version": "01.01",
       "task_name": "Step2",
-      "task_version": "05.03L01",
+      "task_version": "01.00",
 
       "processing_time": 0,
       "nr_cpu": 1,
@@ -760,7 +760,7 @@
       "processor_name": "l0_ec",
       "processor_version": "01.01",
       "task_name": "Step3",
-      "task_version": "05.03L01",
+      "task_version": "01.00",
       "processing_time": 0,
       "nr_cpu": 1,
       "memory_usage": 0,
@@ -782,7 +782,7 @@
       "processor_name": "l0_ec",
       "processor_version": "01.01",
       "task_name": "Step4",
-      "task_version": "05.03L01",
+      "task_version": "01.00",
       "processing_time": 0,
       "nr_cpu": 1,
       "memory_usage": 0,
@@ -808,7 +808,7 @@
       "processor_name": "l0_ec",
       "processor_version": "01.01",
       "task_name": "Step5",
-      "task_version": "05.03L01",
+      "task_version": "01.00",
       "outputs": [
         {
           "type": "EC_RAW__0S",
