FIX: Install tabulate library for test

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -49,6 +49,7 @@ jobs:
     - name: Test FLEX
       run: |
         pip install -e .
+        pip install tabulate
         cd examples_flex
         ./generate_aux.sh
         ./run_all_test_scenario.sh --no-wait
