CHG: Added L1C/L2 tests based on ESAs job orders to CI/CD

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -55,6 +55,7 @@ jobs:
         ./run_all_test_scenario.sh --no-wait
         ./run_cal_test_scenario.sh
         ./all_disp.sh
+        ./run_l1c_l2_test_scenario.sh
 
     - name: Build
       id: pack_tarball
